k8s-configuration/veganfront-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: veganfront-deployment 
  labels: 
    app: veganfront 
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: veganfront 
  template: 
    metadata: 
      labels: 
        app: veganfront
    spec: 
      containers: 
      - name: veganfront
        image: localhost:32000/veganfront:v1
        ports: 
        - containerPort: 80
