k8s-configuration/veganbackend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: veganbackend-service 
spec: 
  type: ClusterIP
  ports: 
   - protocol: TCP  
     port: 8081 
     targetPort: 5000 
  selector: 
    app: veganbackend
